--- a/_site.yml
+++ b/_site.yml
@@ -1,25 +1,21 @@
-name: "Emily C. Zabor"
+name: "Muzeeb Shaik"
 output_dir: "."
 navbar:
-  title: "Emily C. Zabor"
+  title: "Muzeeb Shaik"
   left:
-    - text: "Writing"
+    - text: "Research"
       href: research.html
-    - text: "Speaking"
-      href: talks.html
-    - text: "Programming"
-      href: software.html
     - text: "Teaching"
       href: teaching.html
   right:
     - icon: fa-envelope fa-lg
       href: contact.html
     - icon: fa-github fa-lg
-      href: http://github.com/zabore
+      href: https://github.com/muzeeb1408
     - icon: fa-twitter fa-lg
-      href: https://twitter.com/zabormetrics
+      href: https://twitter.com/muzeebshaik
     - icon: fa-linkedin fa-lg
-      href: https://www.linkedin.com/in/emily-zabor-59b902b7/
+      href: https://www.linkedin.com/in/muzeebshaik/
 output:
   html_document:
     theme: paper
