--- a/_site.yml
+++ b/_site.yml
@@ -18,5 +18,5 @@ navbar:
       href: https://www.linkedin.com/in/muzeebshaik/
 output:
   html_document:
-    theme: paper
+    theme: flatly
     css: 'styles.css'
