--- a/_site.yml
+++ b/_site.yml
@@ -20,5 +20,5 @@ navbar:
       href: https://www.linkedin.com/in/muzeebshaik/
 output:
   html_document:
-    theme: spacelab
+    theme: flatly
     css: 'styles.css'
