--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,11 @@
 name: "Muzeeb Shaik"
+title: "Muzeeb Shaik"
+favicon: images/favicon.png
+base_url: 
+description: |
+  Muzeeb Shaik
 output_dir: "."
 navbar:
-  title: "Muzeeb Shaik"
   left:
     - text: "Research"
       href: research.html
@@ -11,15 +15,13 @@ navbar:
       href: files/Muzeeb_Shaik_CV_Aug_2020.pdf
   right:
     - icon: fa-envelope fa-lg
-      href: contact.html
+      href: "mailto:rs2452@cornell.edu"
     - icon: fa-github fa-lg
       href: https://github.com/muzeeb-shaik
     - icon: fa-twitter fa-lg
       href: https://twitter.com/muzeebshaik
     - icon: fa-linkedin fa-lg
       href: https://www.linkedin.com/in/muzeebshaik/
-      
-output:
-  html_document:
-    theme: paper
-    css: 'styles.css'
+
+output: distill::distill_article
+theme: muzeeb.css
